--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+:root {
+  --primary: #0052cc;
+  --primary-hover: #0065ff;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -17,7 +22,74 @@ code {
   padding: 0;
 }
 
-.container {
+ul,
+li {
+  list-style-type: none;
+}
+
+main,
+nav > div {
   width: 80%;
   margin: auto;
+}
+
+main {
+  margin-top: 80px;
+}
+
+nav {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  width: 100%;
+  background-color: white;
+}
+
+nav > div {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 15px 20px;
+}
+
+nav ul {
+  display: flex;
+  gap: 20px;
+}
+
+nav ul a {
+  text-decoration: none;
+  color: black;
+  text-transform: capitalize;
+  font-size: 16px;
+  line-height: 24px;
+}
+
+nav ul + div {
+  display: flex;
+  gap: 20px;
+}
+
+nav button {
+  padding: 10px 12px;
+  border: none;
+  cursor: pointer;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 15.96px;
+}
+
+nav button.sign-up {
+  background-color: white;
+}
+
+nav button.sign-in {
+  background-color: var(--primary);
+  color: white;
+  border-radius: 4px;
+}
+
+nav button.sign-in:hover {
+  background-color: var(--primary-hover);
 }
