--- a/src/index.css
+++ b/src/index.css
@@ -88,6 +88,6 @@ nav button.sign-in {
   border-radius: 4px;
 }
 
-button:hover {
-  background-color: var(--primary-hover) !important;
+button.sign-in:hover {
+  background-color: var(--primary-hover);
 }
