--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,7 @@ code {
 * {
   margin: 0;
   padding: 0;
+  box-sizing: content-box;
 }
 
 ul,
@@ -31,7 +32,7 @@ li {
   list-style-type: none;
 }
 
-nav > div,
+nav > div.nav-auth,
 .container {
   width: 80%;
   margin: auto;
@@ -44,7 +45,8 @@ nav {
   background-color: white;
 }
 
-nav > div {
+nav > div.nav-auth,
+nav > div.nav-db {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -90,4 +92,32 @@ nav button.sign-in {
 
 button.sign-in:hover {
   background-color: var(--primary-hover);
+}
+
+nav > div.nav-db {
+  box-shadow: 0px 2px 6px rgba(193, 199, 208, 0.4);
+}
+
+nav > div.nav-db > div {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+nav > div.nav-db > div h2 {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 4px;
+  color: #091e42;
+}
+
+nav > div.nav-db div.menu-container,
+nav > div.nav-db div.person-icon-container {
+  cursor: pointer;
+}
+
+nav > div.nav-db div.vertical-line {
+  width: 1px;
+  height: 24px;
+  background-color: #c1c7d0;
 }
