--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
+}
+
+#root {
+  width: 100%;
 }
 
 code {
@@ -27,9 +32,17 @@ code {
   box-sizing: content-box;
 }
 
+.image-sa {
+  width: 100%;
+}
+
 ul,
 li {
   list-style-type: none;
+}
+
+.nav-mobile {
+  display: none;
 }
 
 nav > div.nav-auth,
@@ -39,7 +52,7 @@ nav > div.nav-auth,
 }
 
 nav {
-  position: sticky;
+  position: sticky !important;
   top: 0;
   width: 100%;
   background-color: white;
@@ -48,6 +61,7 @@ nav {
 nav > div.nav-auth,
 nav > div.nav-db {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
   padding: 15px 20px;
@@ -55,6 +69,7 @@ nav > div.nav-db {
 
 nav ul {
   display: flex;
+  flex-wrap: wrap;
   gap: 20px;
 }
 
@@ -66,8 +81,13 @@ nav ul a {
   line-height: 24px;
 }
 
+nav ul a:hover {
+  color: var(--primary);
+}
+
 nav ul + div {
   display: flex;
+  flex-wrap: wrap;
   gap: 20px;
 }
 
@@ -100,6 +120,7 @@ nav > div.nav-db {
 
 nav > div.nav-db > div {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   gap: 10px;
 }
@@ -120,4 +141,51 @@ nav > div.nav-db div.vertical-line {
   width: 1px;
   height: 24px;
   background-color: #c1c7d0;
+}
+
+@media screen and (max-width: 771px) {
+  .nav-auth {
+    display: none !important;
+  }
+
+  .nav-mobile {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    padding: 15px;
+  }
+
+  .nav-mobile .header {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+  }
+
+  .nav-mobile .nav-close {
+    display: none;
+  }
+
+  .nav-mobile .nav-open {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+  }
+
+  .nav-mobile .nav-open div {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .nav-mobile .nav-open div:first-of-type a {
+    text-decoration: none;
+    font-size: 16px;
+    line-height: 24px;
+    text-transform: capitalize;
+    color: #091e42;
+  }
+
+  .nav-mobile .nav-open div button.sign-up {
+    background-color: #f4f5f7;
+  }
 }
