--- a/src/index.css
+++ b/src/index.css
@@ -143,6 +143,87 @@ nav > div.nav-db div.vertical-line {
   background-color: #c1c7d0;
 }
 
+.dropdown {
+  display: block !important;
+  position: absolute;
+  width: 300px;
+  top: 70px;
+  right: 20px;
+  background-color: white;
+  border-radius: 3px;
+  box-shadow: 0px 3px 5px rgba(9, 30, 66, 0.2),
+    0px 0px 1px rgba(9, 30, 66, 0.31);
+}
+
+.dropdown > div {
+  padding: 15px;
+}
+
+.dropdown > div:last-of-type {
+  border-top: 2px solid #e5e5e5;
+  text-transform: capitalize;
+  font-size: 14px;
+  line-height: 20.02px;
+  color: #172b4d;
+}
+
+.dropdown > div:last-of-type p {
+  cursor: pointer;
+}
+
+.dropdown > div:first-of-type {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.dropdown > div:first-of-type > div {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.dropdown > div:first-of-type > div:first-of-type p:first-of-type {
+  text-transform: uppercase;
+  color: #6b778c;
+  font-size: 12px;
+  line-height: 12px;
+  font-weight: 700;
+}
+
+.dropdown > div:first-of-type > div:first-of-type p:last-of-type {
+  text-transform: capitalize;
+  color: #172b4d;
+  font-size: 14px;
+  line-height: 20.02px;
+}
+
+.dropdown > div:first-of-type > div:last-of-type h4 {
+  color: #6b778c;
+  font-size: 12px;
+  line-height: 12px;
+  font-weight: 700;
+}
+
+.dropdown .drop-ls {
+  display: flex;
+  justify-content: space-between;
+  cursor: pointer;
+  text-transform: capitalize;
+  font-size: 14px;
+  line-height: 20.02px;
+  color: #344563;
+}
+
+.dropdown .drop-ls > div {
+  display: flex;
+  gap: 10px;
+}
+
+.close-dropdown {
+  display: none !important;
+}
+
 @media screen and (max-width: 771px) {
   .nav-auth {
     display: none !important;
