--- a/src/features/Auth/Auth.css
+++ b/src/features/Auth/Auth.css
@@ -54,10 +54,44 @@
   gap: 10px;
 }
 
-.auth-screen .authcard .input-container input {
-  border-radius: 4px;
+.auth-screen .authcard div.user-details {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.auth-screen .authcard div.user-details img {
+  cursor: pointer;
+}
+
+.auth-screen .user-details div {
+  text-align: center;
+}
+
+.auth-screen .user-details div h4 {
+  font-size: 19px;
+  font-weight: 700;
+  line-height: 24px;
+}
+
+.auth-screen .user-details div p {
+  font-size: 12px;
+  line-height: 16px;
+}
+
+.auth-screen .authcard .input-container > div {
+  display: flex;
+  justify-content: space-between;
   border: 1px solid #dfe1e6;
+  border-radius: 4px;
   padding: 8px 12px;
+}
+
+.auth-screen .authcard .input-container input {
+  border: none;
+  outline: none;
+  width: 90%;
   font-size: 14px;
   line-height: 20.02px;
 }
@@ -69,6 +103,11 @@
   border: none;
   cursor: pointer;
   color: white;
+}
+
+.auth-screen .authcard button.disabled,
+.auth-screen .authcard button.disabled:hover {
+  background-color: #f4f5f7;
 }
 
 .auth-screen .authcard button:hover {
